--- a/Python_Fundamentals_I.ipynb
+++ b/Python_Fundamentals_I.ipynb
@@ -342,7 +342,9 @@
         "id": "QHBjwTZtsiU6"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "hello"
+      ]
     },
     {
       "cell_type": "code",
@@ -675,7 +677,7 @@
       "source": [
         "Conditional statements are used to control program flow. We can visualize our example, `test_high_score`, in a decision tree.\n",
         "\n",
-        "![simple_logic_flowchart](images/high_score_flowchart.png)\n",
+        "![simple_logic_flowchart](https://github.com/arlpx/dt_data_science/blob/main/images/high_score_flowchart.png?raw=1)\n",
         "\n",
         "We can nest `if` statements to make more complicated trees."
       ]
@@ -710,7 +712,7 @@
       "source": [
         "In this example, we have an `if` statement nested under another `if` statement. As we change the input, we end up on different branches of the tree.\n",
         "\n",
-        "![nested_logic_flowchart](images/nested_logic_flowchart.png)\n",
+        "![nested_logic_flowchart](https://github.com/arlpx/dt_data_science/blob/main/images/nested_logic_flowchart.png?raw=1)\n",
         "\n",
         "The statement that follows the `if` is called the **condition**. The condition can be either true or false."
       ]
@@ -938,8 +940,7 @@
         "\n",
         "    f0 = f1\n",
         "    f1 = next_f\n",
-        "    count += 1\n",
-        ""
+        "    count += 1\n"
       ]
     },
     {
