--- a/(Lopez) Python_Fundamentals_I.ipynb
+++ b/(Lopez) Python_Fundamentals_I.ipynb
@@ -17,7 +17,7 @@
       },
       "source": [
         "\n",
-        "# **Progamming and Python Fundamentals**"
+        "# **Programming and Python Fundamentals**"
       ]
     },
     {
