--- a/(Lopez) Python_Fundamentals_I.ipynb
+++ b/(Lopez) Python_Fundamentals_I.ipynb
@@ -203,21 +203,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "id": "utW3CRe3siU5",
-        "outputId": "eb0f69b5-0e39-400e-a7af-5311cea60be5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ffe191af-186e-44f5-88c2-57bcba162ba7"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<class 'str'>\n",
-            "<class 'int'>\n"
+            "My name is AR Lopez\n",
+            "My age in ten years is 35\n"
           ]
         }
       ],
@@ -226,33 +226,17 @@
         "my_age = 25\n",
         "\n",
         "print('My name is', my_name)\n",
-        "print('My age is', my_age + 10)"
+        "print('My age in ten years is', my_age + 10)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
-        "id": "m0PF4JyvsiU5",
-        "outputId": "57c41795-6589-4a0e-fb42-37b384c55031",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "m0PF4JyvsiU5"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'str'>\n",
-            "<class 'int'>\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(type(my_name))\n",
-        "print(type(my_age))"
-      ]
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
