--- a/(Lopez) Python_Fundamentals_I.ipynb
+++ b/(Lopez) Python_Fundamentals_I.ipynb
@@ -203,13 +203,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 23,
       "metadata": {
         "id": "utW3CRe3siU5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ffe191af-186e-44f5-88c2-57bcba162ba7"
+        "outputId": "00f33c83-c713-405c-bc32-33aabdcde9c6"
       },
       "outputs": [
         {
@@ -217,7 +217,7 @@
           "name": "stdout",
           "text": [
             "My name is AR Lopez\n",
-            "My age in ten years is 35\n"
+            "My age  is 25\n"
           ]
         }
       ],
@@ -226,17 +226,31 @@
         "my_age = 25\n",
         "\n",
         "print('My name is', my_name)\n",
-        "print('My age in ten years is', my_age + 10)"
+        "print('My age is', my_age)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 27,
       "metadata": {
-        "id": "m0PF4JyvsiU5"
+        "id": "m0PF4JyvsiU5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "00ba022c-fa01-4ca7-ebb3-bd7443cd4c82"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "My age in ten years would be 35\n"
+          ]
+        }
+      ],
+      "source": [
+        "print('My age in ten years would be', my_age + 10)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -294,11 +308,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "v_IIj4cJsiU6"
+        "id": "v_IIj4cJsiU6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "outputId": "923559df-4580-4c9d-d694-c531879d1b25"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'square' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-2801097991.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# we can store function output in variables\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msquared\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msquare\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msquared\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'square' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# we can store function output in variables\n",
         "squared = square(5.5)\n",
@@ -356,21 +387,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "QHBjwTZtsiU6"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "def cube(number):\n",
+        "  return number**3\n",
+        "\n",
+        "  number = 3"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "DOrbJP8ssiU6"
+        "id": "DOrbJP8ssiU6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8fea52e8-85ff-47ba-ab05-e750ed549b63"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "27\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(cube(number))"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -383,20 +433,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
-        "id": "DTagKV5XsiU6"
+        "id": "DTagKV5XsiU6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "276231f5-62c0-4f35-df93-b077de517b0e"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Dean\n"
+          ]
+        }
+      ],
+      "source": [
+        "def say_hello(name):\n",
+        "  print(\"Hello\", name)\n",
+        "\n",
+        "say_hello(\"Dean\")"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "C4xt-uVGsiU6"
+        "id": "C4xt-uVGsiU6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b8a7f1c2-fd12-43d8-aac1-238c5f44a27a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<function say_hello at 0x7d03ff1da480>\n"
+          ]
+        }
+      ],
       "source": []
     },
     {
@@ -438,11 +517,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
-        "id": "YM7je9mpsiU6"
+        "id": "YM7je9mpsiU6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "25e4020f-f01e-46f7-9dac-ed21647b9a28"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "4\n",
+            "9\n",
+            "16\n",
+            "25\n",
+            "36\n",
+            "49\n",
+            "64\n",
+            "81\n"
+          ]
+        }
+      ],
       "source": [
         "print(1**2)\n",
         "print(2**2)\n",
@@ -466,7 +565,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "id": "Rg-LClmVsiU6"
       },
@@ -478,11 +577,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
-        "id": "OM9h1Ky0siU-"
+        "id": "OM9h1Ky0siU-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "038a4e0f-b22a-49be-a399-cf00d012e487"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "4\n",
+            "9\n",
+            "16\n",
+            "25\n",
+            "36\n",
+            "49\n",
+            "64\n",
+            "81\n"
+          ]
+        }
+      ],
       "source": [
         "do_it(1)\n",
         "do_it(2)\n",
@@ -581,21 +700,54 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
         "id": "TLhNK2PwsiU-"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "def do_it(x):\n",
+        "    print(x**2)"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
-        "id": "_0fb6JA0siU-"
+        "id": "_0fb6JA0siU-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "30c412ee-f41a-4a79-8906-7b9bab82758f"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "4\n",
+            "9\n",
+            "16\n",
+            "25\n",
+            "36\n",
+            "49\n",
+            "64\n",
+            "81\n"
+          ]
+        }
+      ],
+      "source": [
+        "do_it(1)\n",
+        "do_it(2)\n",
+        "do_it(3)\n",
+        "do_it(4)\n",
+        "do_it(5)\n",
+        "do_it(6)\n",
+        "do_it(7)\n",
+        "do_it(8)\n",
+        "do_it(9)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -610,11 +762,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
-        "id": "W4j6FD5-siU-"
+        "id": "W4j6FD5-siU-",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "26a2099a-eb7d-4c26-a686-75f1477d6a25"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "example_a is running\n",
+            "returning value \"a\"\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'a'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ],
       "source": [
         "def example_a():\n",
         "    print('example_a is running')\n",
@@ -626,11 +805,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
-        "id": "DPJUq4h5siU_"
+        "id": "DPJUq4h5siU_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3e1277cf-c64a-4948-fe8c-ae4b559b5686"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "example_b is running\n",
+            "exiting without returning a value\n"
+          ]
+        }
+      ],
       "source": [
         "def example_b():\n",
         "    print('example_b is running')\n",
@@ -765,11 +957,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {
-        "id": "3laY2wofsiU_"
+        "id": "3laY2wofsiU_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "41b8c548-0fe1-4d0f-e6ca-d779638a9997"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n",
+            "False\n",
+            "False\n"
+          ]
+        }
+      ],
       "source": [
         "print(True and True)\n",
         "print(True and False)\n",
@@ -871,21 +1078,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
         "id": "wJpe8nbasiVA"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "def take_num(number):\n",
+        "  if number >= 10 or number <= 20 or number <= -100:\n",
+        "    return 'True'\n",
+        "  else:\n",
+        "    return 'False'"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "metadata": {
-        "id": "UVKKjobGsiVA"
+        "id": "UVKKjobGsiVA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b228369d-585c-418c-babd-eee0ce6aed6d"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(take_num(9))"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -920,25 +1147,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {
         "scrolled": true,
         "id": "3Sk7GhVysiVA",
-        "outputId": "f7e62b14-489e-4994-d9a0-8aa50af3cf0e"
+        "outputId": "92ea7f5e-6e3b-4fbf-eee1-40c7bbec57c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Enter any positive integer number:7\n",
+            "Enter any positive integer number:10\n",
             "0\n",
             "1\n",
             "1\n",
             "2\n",
             "3\n",
             "5\n",
-            "8\n"
+            "8\n",
+            "13\n",
+            "21\n",
+            "34\n"
           ]
         }
       ],
@@ -1022,7 +1255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "metadata": {
         "id": "wa8k_-elsiVB"
       },
@@ -1048,7 +1281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {
         "id": "h4vLIX9YsiVB"
       },
@@ -1061,11 +1294,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {
-        "id": "P3IpOj0SsiVB"
+        "id": "P3IpOj0SsiVB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "114bd1fc-bec3-4767-da99-1bf0a4729d1a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dissolve salt in water\n",
+            "Boil  water\n",
+            "Add bones to boiling water\n",
+            "Chop onions\n",
+            "Chop garlic\n",
+            "Chop carrot\n",
+            "Chop celery\n",
+            "Remove bones from water\n",
+            "Add vegetables to boiling water\n",
+            "Add meat to boiling water\n"
+          ]
+        }
+      ],
       "source": [
         "print_recipe(soup_recipe)"
       ]
