--- a/DataScience_Activity1.ipynb
+++ b/DataScience_Activity1.ipynb
@@ -92,19 +92,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "593456ce-9aef-436b-80df-e8268e285069",
       "metadata": {
         "editable": true,
         "tags": [],
-        "id": "593456ce-9aef-436b-80df-e8268e285069"
+        "id": "593456ce-9aef-436b-80df-e8268e285069",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5cd34651-5325-49c3-a152-18d7bc33d719"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 is a Prime number\n",
+            "3 is a Prime number\n",
+            "5 is a Prime number\n",
+            "7 is a Prime number\n",
+            "11 is a Prime number\n",
+            "13 is a Prime number\n",
+            "17 is a Prime number\n",
+            "19 is a Prime number\n",
+            "23 is a Prime number\n"
+          ]
+        }
+      ],
+      "source": [
+        "def is_prime(num):\n",
+        "  if num <= 1:\n",
+        "    return False\n",
+        "\n",
+        "  for i in range(2, int(num**0.5) + 1):\n",
+        "    if num % i == 0:\n",
+        "      return False\n",
+        "\n",
+        "  return True\n",
+        "\n",
+        "def print_prime(pnum):\n",
+        "  for num in range(2, pnum + 1):\n",
+        "    if is_prime(num):\n",
+        "      print(f'{num} is a Prime number')\n",
+        "\n",
+        "print_prime(24)"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "90a6d6b2-f0d9-4618-9a71-4bd809a217b9",
       "metadata": {
         "deletable": true,
@@ -165,7 +202,13 @@
         "id": "1a12aa8b-ad11-46ae-9214-4a3ed0d66ad2"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "sales_day1 = 500\n",
+        "sales_day2 = 450\n",
+        "sales_day3 = 670\n",
+        "\n",
+        "def check_"
+      ]
     },
     {
       "cell_type": "code",
