--- a/DataScience_Activity1.ipynb
+++ b/DataScience_Activity1.ipynb
@@ -45,7 +45,7 @@
         "id": "29d0b1d4-a6e8-481e-8273-33d5a0bf00e5"
       },
       "source": [
-        "**Name**: *put your name here*"
+        "**Name**: Adrianna Rose Lopez"
       ]
     },
     {
@@ -92,16 +92,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "id": "593456ce-9aef-436b-80df-e8268e285069",
       "metadata": {
         "editable": true,
         "tags": [],
         "id": "593456ce-9aef-436b-80df-e8268e285069",
+        "outputId": "17b1a440-991c-427a-abfe-f0f5194592f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5cd34651-5325-49c3-a152-18d7bc33d719"
+        }
       },
       "outputs": [
         {
@@ -141,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "90a6d6b2-f0d9-4618-9a71-4bd809a217b9",
       "metadata": {
         "deletable": true,
@@ -202,13 +202,7 @@
         "id": "1a12aa8b-ad11-46ae-9214-4a3ed0d66ad2"
       },
       "outputs": [],
-      "source": [
-        "sales_day1 = 500\n",
-        "sales_day2 = 450\n",
-        "sales_day3 = 670\n",
-        "\n",
-        "def check_"
-      ]
+      "source": []
     },
     {
       "cell_type": "code",
