--- a/DataScience_Activity1.ipynb
+++ b/DataScience_Activity1.ipynb
@@ -45,7 +45,7 @@
         "id": "29d0b1d4-a6e8-481e-8273-33d5a0bf00e5"
       },
       "source": [
-        "**Name**: Adrianna Rose Lopez"
+        "**Name**: Adrianna Rose S. Lopez"
       ]
     },
     {
@@ -92,16 +92,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "id": "593456ce-9aef-436b-80df-e8268e285069",
       "metadata": {
         "editable": true,
         "tags": [],
         "id": "593456ce-9aef-436b-80df-e8268e285069",
-        "outputId": "17b1a440-991c-427a-abfe-f0f5194592f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d2da5b42-9145-488e-ae17-8914ead00f43"
       },
       "outputs": [
         {
